--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -88,7 +88,7 @@
                 <div class="col-md-5 ">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae molestias saepe unde
                         voluptatum. Repellendus, nam!</p>
-                    <img src="images/bill-gates.jfif" alt="bill gates" height="100px" width="84px">
+                    <img src="bill-gates.jfif" alt="bill gates" height="100px" width="84px">
                     <div class="author">Bill Gates</div>
                     <div class="author-company">Microsoft</div>
                 </div>
@@ -96,7 +96,7 @@
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda iste dicta,
                         tempore illo porro provident!</p>
-                    <img src="images/steve-jobs.jpg" alt="steve jobs" height="100px" width="84px">
+                    <img src="steve-jobs.jpg" alt="steve jobs" height="100px" width="84px">
                     <div class="author">Steve jobs</div>
                     <div class="author-company">Apple</div>
                 </div>
@@ -110,7 +110,7 @@
                     <h2>Recent News</h2>
                 </div>
                 <div class="col-lg-3 col-md-6 newss">
-                    <img src="images/first.jfif" alt="first-news" height="45%" width="90%">
+                    <img src="first.jfif" alt="first-news" height="45%" width="90%">
                     <h3>First heading</h3>
                     <i class="fa fa-calendar" aria-hidden="true"></i>
 
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 newss">
-                    <img src="images/second.jfif" alt="second-news" height="45%" width="90%">
+                    <img src="second.jfif" alt="second-news" height="45%" width="90%">
                     <h3>Second heading</h3>
                     <i class="fa fa-calendar" aria-hidden="true"></i>
 
@@ -130,7 +130,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 newss">
-                    <img src="images/third.jfif" alt="third-news" height="45%" width="90%">
+                    <img src="third.jfif" alt="third-news" height="45%" width="90%">
                     <h3>Third heading</h3>
                     <i class="fa fa-calendar" aria-hidden="true"></i>
 
