--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 newss">
-                    <img src="images/fourth.jfif" alt="fourth-news" height="45%" width="90%">
+                    <img src="fourth.jfif" alt="fourth-news" height="45%" width="90%">
                     <h3>Fourth heading</h3>
                     <i class="fa fa-calendar" aria-hidden="true"></i>
 
